  local memory size for the CPU devices.
- CUDA: Added Direct Peer-to-Peer buffer migrations for much better performance
  scaling in multi-GPU scenarios
- Partial support for cl_khr_fp16 when compiled with LLVM 16+. The
  implementation relies on Clang, and may result in emulation if
  the CPU does not support the required instruction set.
- [Linux, x86-64 only] SIGFPE handler has been changed to skip instructions
  causing division-by-zero, only if it occured in one of the CPU driver
  threads; so division-by-zero errors are no longer hidden in user threads.

Notable Fixes
-------------

- Fix handling of clBuildProgram() -I directories given with quotes or
  with leading/trailing white space.
- Fix long kernel names trying to create too long dir/filenames. This
  affected programs with long kernel names generated by template
  specialization.

3.1 December 2022
=================

Notable User Facing Changes
---------------------------

- Support for Clang/LLVM 15.0
- Work-in-progress Vulkan-driver:
  * implement clEnqRead/Copy/WriteRect + clEnqFillBuffer
  * implement global offsets
  * add support for external memory
  * implement WG sizes larger than vulkan limits with global offsets
  * fix module constants
  * and other small fixes and improvements
- SPIR-V support: much improved support for both CPU driver and CUDA
  * vectorized versions of kernel library functions now supported
  * much improved support on ARM64 & x86-64 with recent LLVMs
  * fixed some atomic builtin functions
  * SPIR-V new subtests from OpenCL-CTS now pass (with sufficiently recent
    llvm-spirv translator)
  * most of the CTS passes with offline-compile=spirv option
  * specialization constants are supported via clSetProgramSpecializationConstant
- improved Valgrind/Helgrind support
- All device names used to control the platform setup via
  POCL_DEVICES are now lower case (as documented in the user manual).
- Switch from __sync_*() to __atomic_*() (compiler builtins).