@@ -39,7 +39,7 @@ Notable User Facing Changes
 - Partial support for cl_khr_fp16 when compiled with LLVM 16+. The
   implementation relies on Clang, and may result in emulation if
   the CPU does not support the required instruction set.
-- [Linux, x86-64 only] SIGFPE handler has been changed to skip instructions
+- Linux/x86-64 only: SIGFPE handler has been changed to skip instructions
   causing division-by-zero, only if it occured in one of the CPU driver
   threads; so division-by-zero errors are no longer hidden in user threads.
 
@@ -51,6 +51,8 @@ Notable Fixes
 - Fix long kernel names trying to create too long dir/filenames. This
   affected programs with long kernel names generated by template
   specialization.
+- CPU driver: Made kernel debug info more robust especially
+  when building the device program from SPIR-V.
 
 3.1 December 2022
 =================
